abi/ccharts_abi.h


typedef struct ccharts_data ccharts_data;
typedef struct ccharts_settings {
    const char* rise_color;
    const char* fall_color;
    const char* bg_color;
    const char* area_color;
    int32_t single_color;
    int32_t show_prices;
    int32_t show_times;
} ccharts_settings;
CCHARTS_API int32_t ccharts_from_arrays(const double* open,
                                               const double* high,
                                               const double* low,
                                               const double* close,
                                               const int64_t* ts,
                                               int32_t n,
                                               ccharts_data** out);
CCHARTS_API int32_t ccharts_parse_json(const char* json,
                                              ccharts_data** out);
CCHARTS_API int32_t ccharts_parse_csv(const char* csv,
                                             char value_separator,
                                             char line_separator,
                                             ccharts_data** out);
CCHARTS_API int32_t ccharts_data_len(const ccharts_data* data);
CCHARTS_API void ccharts_data_free(ccharts_data* data);
CCHARTS_API int32_t ccharts_line(const ccharts_data* data,
                                        int32_t width, int32_t height,
                                        const ccharts_settings* settings,
                                        char** out, size_t* out_len);
CCHARTS_API int32_t ccharts_candle(const ccharts_data* data,
                                          int32_t width, int32_t height,
                                          const ccharts_settings* settings,
                                          char** out, size_t* out_len);
CCHARTS_API void ccharts_string_free(char* s);
typedef struct ccharts_pie_slice {
    const char* label;
    double value;
} ccharts_pie_slice;
CCHARTS_API int32_t ccharts_pie_from_slices(
    const ccharts_pie_slice* slices, int32_t count,
    int32_t width, int32_t height,
    int32_t donut,
    const char* const* colors, int32_t color_count,
    int32_t show_legend, int32_t show_pct,
    double slice_gap, double inner_radius_ratio, int32_t legend_format,
    double start_angle, int32_t counter_clockwise, const char* center_text,
    char** out, size_t* out_len);
typedef struct ccharts_hist_settings {
    const char* rise_color;
    const char* bg_color;
    int32_t bin_count;
    double  min_value;
    double  max_value;
    int32_t show_bins;
    int32_t show_prices;
} ccharts_hist_settings;
CCHARTS_API int32_t ccharts_hist(const double* samples, int32_t count,
                                 int32_t width, int32_t height,
                                 const ccharts_hist_settings* settings,
                                 char** out, size_t* out_len);
typedef struct ccharts_spark_settings {
    const char* rise_color;
    const char* area_color;
    int32_t min_above;
    int32_t min_below;
} ccharts_spark_settings;
CCHARTS_API int32_t ccharts_spark(const double* samples, int32_t count,
                                  int32_t width, int32_t height,
                                  const ccharts_spark_settings* settings,
                                  char** out, size_t* out_len);
typedef struct ccharts_bar_slice {
    const char* label;
    double value;
} ccharts_bar_slice;
typedef struct ccharts_bar_settings {
    const char* rise_color;
    const char* bg_color;
    int32_t show_labels;
    int32_t show_prices;
} ccharts_bar_settings;
CCHARTS_API int32_t ccharts_bar(const ccharts_bar_slice* items, int32_t count,
                                int32_t width, int32_t height,
                                const ccharts_bar_settings* settings,
                                char** out, size_t* out_len);
typedef struct ccharts_stack_series {
    const char* name;
    const double* values;
} ccharts_stack_series;
typedef struct ccharts_stack_settings {
    const char* const* colors;
    const char* bg_color;
    const char* const* cat_labels;
    int32_t series;
    int32_t cats;
    int32_t show_labels;
    int32_t show_prices;
} ccharts_stack_settings;
CCHARTS_API int32_t ccharts_stack(const ccharts_stack_series* series,
                                  int32_t series_count,
                                  int32_t width, int32_t height,
                                  const ccharts_stack_settings* settings,
                                  char** out, size_t* out_len);
typedef struct ccharts_heat_settings {
    const char* low_color;
    const char* high_color;
    const char* mid_color;
    const char* bg_color;
    const char* const* row_labels;
    const char* const* col_labels;
    int32_t show_labels;
} ccharts_heat_settings;
CCHARTS_API int32_t ccharts_heat(const double* values, int32_t rows,
                                 int32_t cols,
                                 int32_t width, int32_t height,
                                 const ccharts_heat_settings* settings,
                                 char** out, size_t* out_len);
typedef struct ccharts_box_category {
    const char* name;
    const double* samples;
    int32_t n;
} ccharts_box_category;
typedef struct ccharts_box_settings {
    const char* rise_color;
    const char* area_color;
    const char* bg_color;
    int32_t show_prices;
} ccharts_box_settings;
CCHARTS_API int32_t ccharts_box(const ccharts_box_category* cats,
                                int32_t cat_count,
                                int32_t width, int32_t height,
                                const ccharts_box_settings* settings,
                                char** out, size_t* out_len);
CCHARTS_API const char* ccharts_color(int32_t index);
CCHARTS_API const char* ccharts_error_message(int32_t status);
CCHARTS_API const char* ccharts_version(void);
CCHARTS_API int32_t ccharts_max_dim(void);
CCHARTS_API int32_t ccharts_max_cells(void);